# CJSPlayer

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/com/chen/cyplayer/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/chen/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  CXAudio.cpp  CXAudio.h  Caudio.cpp  Caudio.h  CyAudio.cpp  CyAudio.h  CyBufferQueue.cpp  CyBufferQueue.h  CyCallJava.cpp  CyCallJava.h  CyFFmpeg.cpp  CyFFmpeg.h  CyPcmBean.cpp  CyPcmBean.h  CyPlaystatus.cpp  CyPlaystatus.h  CyQueue.cpp  CyQueue.h  CyVideo.cpp  CyVideo.h  RecordBuffer.cpp  RecordBuffer.h  SLESRecord.cpp  SLESRecord.h  native-lib.cpp
app/src/main/cpp/push/: CyPushCallJava.cpp  CyPushCallJava.h  CyPushQueue.cpp  CyPushQueue.h  RtmpPush.cpp  RtmpPush.h
app/src/main/cpp/soundtouch/include/: STTypes.h
app/src/main/java/com/chen/cjsplayer/: LivePushActivity.java  Main1Activity.java  Main2Activity.java  Main3Activity.java  Main4Activity.java  MainActivity.kt  NormalVideoActivity.kt  PushLiveActivity.kt  RecordActivity.java  TestActivity.java  test.kt
app/src/main/java/com/chen/cjsplayer/audiorecord/: AudioRecordUitl.java
app/src/main/java/com/chen/cjsplayer/bean/: CyTimeInfoBean.java
app/src/main/java/com/chen/cjsplayer/camera/: CyCamera.java  CyCameraFboRender.java  CyCameraRender.java  CyCameraView.java
app/src/main/java/com/chen/cjsplayer/encodec/: CyBaseMediaEncoder.java  CyEncodecRender.java  CyMediaEncodec.java
app/src/main/java/com/chen/cjsplayer/enums/: MuteEnum.java
app/src/main/java/com/chen/cjsplayer/imgvideo/: CyImgVideoRender.java  CyImgVideoView.java
app/src/main/java/com/chen/cjsplayer/listener/: CyOnCompleteListener.java  CyOnErrorListener.java  CyOnLoadListener.java  CyOnPauseResumeListener.java  CyOnPcmInfoListener.java  CyOnPreparedListener.java  CyOnRecordTimeListener.java  CyOnTimeInfoListener.java  CyOnValumeDBListener.java
app/src/main/java/com/chen/cjsplayer/log/: MyLog.java
app/src/main/java/com/chen/cjsplayer/opengl/: CyEGLSurfaceView.java  CyGLSurfaceView.java  CyGLTextureView.java  CyMutiRender.java  CyMutiSurfaceVeiw.java  CyRender.java  CyShaderUtil.java  CyTextureRender.java  EglHelper.java  FboRender.java
app/src/main/java/com/chen/cjsplayer/player/: CyPlayer.java
app/src/main/java/com/chen/cjsplayer/push/: CyBasePushEncoder.java  CyConnectListenr.java  CyEncodecPushRender.java  CyPushEncodec.java  CyPushVideo.java
app/src/main/java/com/chen/cjsplayer/util/: CyTimeUtil.java  CyVideoSupportUitl.java  DisplayUtil.java
app/src/main/java/com/chen/cjsplayer/yuv/: CyYuvFboRender.java  CyYuvRender.java  CyYuvView.java
app/src/main/java/com/chen/cyplayer/: CyGLTextureView.java  LivePushActivity.java  Main2Activity.java  Main3Activity.java  Main4Activity.java  MainActivity.java  RecordActivity.java  TestActivity.java
app/src/main/java/com/chen/cyplayer/audiorecord/: AudioRecordUitl.java
app/src/main/java/com/chen/cyplayer/bean/: CyTimeInfoBean.java
app/src/main/java/com/chen/cyplayer/camera/: CyCamera.java  CyCameraFboRender.java  CyCameraRender.java  CyCameraView.java
app/src/main/java/com/chen/cyplayer/encodec/: CyBaseMediaEncoder.java  CyEncodecRender.java  CyMediaEncodec.java
app/src/main/java/com/chen/cyplayer/enums/: MuteEnum.java
app/src/main/java/com/chen/cyplayer/imgvideo/: CyImgVideoRender.java  CyImgVideoView.java
app/src/main/java/com/chen/cyplayer/listener/: CyOnCompleteListener.java  CyOnErrorListener.java  CyOnLoadListener.java  CyOnParparedListener.java  CyOnPauseResumeListener.java  CyOnPcmInfoListener.java  CyOnPreparedListener.java  CyOnRecordTimeListener.java  CyOnTimeInfoListener.java  CyOnValumeDBListener.java
app/src/main/java/com/chen/cyplayer/log/: MyLog.java
app/src/main/java/com/chen/cyplayer/opengl/: CyEGLSurfaceView.java  CyGLSurfaceView.java  CyGLTextureView.java  CyMutiRender.java  CyMutiSurfaceVeiw.java  CyRender.java  CyShaderUtil.java  CyTextureRender.java  EglHelper.java  FboRender.java
app/src/main/java/com/chen/cyplayer/player/: CyPlayer.java
app/src/main/java/com/chen/cyplayer/push/: CyBasePushEncoder.java  CyConnectListenr.java  CyEncodecPushRender.java  CyPushEncodec.java  CyPushVideo.java
app/src/main/java/com/chen/cyplayer/util/: CyTimeUtil.java  CyVideoSupportUitl.java  DisplayUtil.java
app/src/main/java/com/chen/cyplayer/yuv/: CyYuvFboRender.java  CyYuvRender.java  CyYuvView.java
app/src/main/java/com/chen/ffmpegPlayer/: MainActivity.java
app/src/main/java/com/chen/test/: CyGLSurfaceView.java  CyRender.java
app/src/main/res/layout/: activity_live_push.xml  activity_main.xml  activity_main1.xml  activity_main2.xml  activity_main3.xml  activity_main4.xml  activity_normal_video.xml  activity_push_live.xml  activity_record.xml  activity_test.xml
app/src/main/res/raw/: fragment_shader.glsl  fragment_shader3.glsl  fragment_shader_screen.glsl  fragment_yuv.glsl  vertex_shader.glsl  vertex_shaders.glsl  vertex_shaders_c.glsl
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/chen/cyplayer/: ExampleUnitTest.java
app/src/test/java/com/chen/ffmpegdemo/: ExampleUnitTest.java
cjsplayer/: build.gradle
cjsplayer/src/main/cpp/: CMakeLists.txt  cjsplayer-native-lib.cpp
cjsplayer/src/main/cpp/codec/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  VideoChannel.cpp  VideoChannel.h
cjsplayer/src/main/cpp/ffmpeg/include/libswscale/: swscale.h
cjsplayer/src/main/cpp/libfaac/: CMakeLists.txt  frame.c
cjsplayer/src/main/cpp/librtmp/: CMakeLists.txt
cjsplayer/src/main/cpp/livepush/: AudioPushChannel.cpp  AudioPushChannel.h  VideoPushChannel.cpp  VideoPushChannel.h
cjsplayer/src/main/cpp/player/: CJSPlayer.cpp  CJSPlayer.h
cjsplayer/src/main/cpp/queue/: safe_queue.h
cjsplayer/src/main/cpp/utils/: AndroidLog.hpp  JNICallbackHelper.cpp  JNICallbackHelper.h  utils.h
(+24 files in other folders)
